# POO_TD_2023-2024_ETIENNE_Romain

./: README.md
Projet_Traitement_Image_CPP/: CMakeLists.txt  Readme.md  bilateral.h  bmpio.cpp  bmpio.h  downscaling.cpp  downscaling.h  filter.cpp  filter.h  filterbilateral.cpp  filterbilateral.h  filterdownscaling.cpp  filterdownscaling.h  filtergaussian.cpp  filtergaussian.h  filterrescaling.cpp  filterrescaling.h  filterupscaling.cpp  filterupscaling.h  image.cpp  image.h  image1i16.cpp  image1i16.h  image3ui16.cpp  image3ui16.h  image4ui8.cpp  image4ui8.h  imageio.cpp  imageio.h  imgprocess  main.cpp  parsefile.cpp  parsefile.h  path.cpp  path.h  pgmio.cpp  pgmio.h  ppmio.cpp  ppmio.h  resolver.cpp  (+1 more)
Projet_Traitement_Image_CPP/imgprocess_es/bmp/bmp_bilateral/: imgprocess
Projet_Traitement_Image_CPP/imgprocess_es/bmp/bmp_downscaling/: imgprocess
Projet_Traitement_Image_CPP/imgprocess_es/bmp/bmp_gaussian/: imgprocess
Projet_Traitement_Image_CPP/imgprocess_es/bmp/bmp_rescaling/: imgprocess
Projet_Traitement_Image_CPP/imgprocess_es/pgm/pgm_bilateral/: imgprocess  out.pgm
Projet_Traitement_Image_CPP/imgprocess_es/pgm/pgm_downscaling/: imgprocess  out.pgm
Projet_Traitement_Image_CPP/imgprocess_es/pgm/pgm_gaussian/: imgprocess  out.pgm
Projet_Traitement_Image_CPP/imgprocess_es/pgm/pgm_rescaling/: imgprocess  out.pgm
Projet_Traitement_Image_CPP/imgprocess_es/pgm/pgm_upscaling/: imgprocess
Projet_Traitement_Image_CPP/imgprocess_es/ppm/ppm_bilateral/: imgprocess  out.ppm
Projet_Traitement_Image_CPP/imgprocess_es/ppm/ppm_downscaling/: imgprocess  out.ppm
Projet_Traitement_Image_CPP/imgprocess_es/ppm/ppm_gaussian/: imgprocess  out.ppm
Projet_Traitement_Image_CPP/imgprocess_es/ppm/ppm_rescaling/: imgprocess  out.ppm
Projet_Traitement_Image_CPP/imgprocess_es/ppm/ppm_upscaling/: imgprocess
TD1/: CMakeLists.txt  main.cpp  main.cpp.autosave
TD2/: CMakeLists.txt  main.cpp  point2f.cpp
TD3/: CMakeLists.txt  echange.h  main.cpp
TD4/: CMakeLists.txt  main.cpp
TD5/: CMakeLists.txt  diag2f.cpp  diag2f.h  genmatrix2x2f.cpp  genmatrix2x2f.h  main.cpp  point2f.h  rotation2f.cpp  rotation2f.h
